--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,20 @@
 <body>
 <img src="imgs/dv0VsRqUoDue7oZC98lZ6pgUKCHnYMg9oaHFVmGquxkWwbqM1yoQN-WPxVTs1d5k1QQnIZlD_-Yl5CW2ZkGPfaaC.jpg" alt="ёжик" width="200" >
 
-    <h1>Тугулов Иннокентий</h1>
+<header id="header" class="header">
+
+    <h1>Тугулов Иннокентий</h1>  
+
+</header>
 
     <p>Я только начинаю свой путь в <em>программировании</em> и хочу сменить род деятельности</p>
 
     <p>Я люблю <strong>программировать</strong> и <strong><em>спать</em></strong></p>
    
+<section>
+
     <h2>Мои хобби</h2>
+
     <ul>
         <li>Программирование</li>
         <li>Компьютерные игры</li>
@@ -25,15 +32,18 @@
         <li>Книги Гарри Гаррисона</li>
     </ul>
    
-    <h3>Список социальных сетей</h3>
+    <h2>Список социальных сетей</h2>
 
     <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
     
     <a href="https://vk.com/m_keeeeeeeeeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
 
+</section>
+
     <h3>Связаться со мной</h3>
 
     <form>
+
         <div>
             <label for="name">Ваше имя:</label>
             <input type="text" id="name" placeholder="Введите имя">
