add css, and js folders

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,11 @@
     <title>Innokentiy resume</title>
 </head>
 <body>
+    <link rel="stylesheet" href="css/main.css">
+
+    <div>
 <img src="imgs/dv0VsRqUoDue7oZC98lZ6pgUKCHnYMg9oaHFVmGquxkWwbqM1yoQN-WPxVTs1d5k1QQnIZlD_-Yl5CW2ZkGPfaaC.jpg" alt="ёжик" width="200" >
+</div>
 
 <header id="header" class="header">
 
@@ -25,13 +29,18 @@
 
     <h2>Мои хобби</h2>
 
-    <ul>
-        <li>Программирование</li>
-        <li>Компьютерные игры</li>
-        <li>MMA</li>
-        <li>Книги Гарри Гаррисона</li>
-    </ul>
-   
+    <p>
+        <ul>
+         <li>Программирование</li>
+         <br>
+         <li>Компьютерные игры</li>
+         <br>
+         <li>MMA</li>
+         <br>
+         <li>Книги Гарри Гаррисона</li>
+        </ul>
+    </p>
+
     <h2>Список социальных сетей</h2>
 
     <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
@@ -40,7 +49,15 @@
 
 </section>
 
-    <h3>Связаться со мной</h3>
+<div>
+<button class="custom-btn btn-5">
+    <span>
+        Кнопка не работает
+    </span>
+</button>
+</div>
+
+<h2>Связаться со мной</h2>
 
     <form>
 
