Добавленые некоторые файлы, часть из которых отказывается работать.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="keywords" content="resume, innokentiy, cv">
     <meta name="description" content="Это сайт резюме Тугулова Иннокентия">
     <title>Innokentiy resume</title>
+
+
 </head>
 <body>
+    
     <link rel="stylesheet" href="css/main.css">
 
     <div>
-<img src="imgs/dv0VsRqUoDue7oZC98lZ6pgUKCHnYMg9oaHFVmGquxkWwbqM1yoQN-WPxVTs1d5k1QQnIZlD_-Yl5CW2ZkGPfaaC.jpg" alt="ёжик" width="200" >
-</div>
+        <img src="imgs/dv0VsRqUoDue7oZC98lZ6pgUKCHnYMg9oaHFVmGquxkWwbqM1yoQN-WPxVTs1d5k1QQnIZlD_-Yl5CW2ZkGPfaaC.jpg" alt="ёжик" width="200" >
+    </div>
 
-<header id="header" class="header">
-
-    <h1>Тугулов Иннокентий</h1>  
-
-</header>
+    <header id="header" class="header">
+        <h1>Тугулов Иннокентий</h1>  
+    </header>
 
     <p>Я только начинаю свой путь в <em>программировании</em> и хочу сменить род деятельности</p>
 
@@ -50,9 +51,9 @@
 </section>
 
 <div>
-<button class="custom-btn btn-5">
+<button onclick="document.location='https://github.com/barzugini'" class="custom-btn btn-5">
     <span>
-        Кнопка не работает
+        Git
     </span>
 </button>
 </div>
