trying to change the fonts to make them more suitable

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1>Тугулов Иннокентий</h1>  
     </header>
 
-    <p>Я только начинаю свой путь в <em>программировании</em> и хочу сменить род деятельности</p>
+    <p>Я только начинаю свой путь в программировании и хочу сменить род деятельности</p>
 
-    <p>Я люблю <strong>программировать</strong> и <strong><em>спать</em></strong></p>
+    <p>Я люблю программировать и спать</p>
    
 <section>
 
