finally figured out how to align the list with respect to the general text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2>Мои хобби</h2>
 
-    
+    <div class="container">
         <ul>
          <li>Программирование</li>
          <br>
@@ -40,7 +40,7 @@
          <br>
          <li>Книги Гарри Гаррисона</li>
         </ul>
-    
+    </div>
 
     <h2>Список социальных сетей</h2>
 
