--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <link rel="stylesheet" href="css/main.css">
 
-    <div>
+    <div class="photo">
         <img src="imgs/dv0VsRqUoDue7oZC98lZ6pgUKCHnYMg9oaHFVmGquxkWwbqM1yoQN-WPxVTs1d5k1QQnIZlD_-Yl5CW2ZkGPfaaC.jpg" alt="ёжик" width="200" >
     </div>
 
@@ -22,10 +22,12 @@
         <h1>Тугулов Иннокентий</h1>  
     </header>
 
+    <div class="description">
     <p>Я только начинаю свой путь в программировании и хочу сменить род деятельности</p>
 
     <p>Я люблю программировать и спать</p>
-   
+    </div>
+
 <section>
 
     <h2>Мои хобби</h2>
@@ -50,7 +52,7 @@
 
 </section>
 
-<div>
+<div class="photo">
 <button onclick="document.location='https://github.com/barzugini'" class="custom-btn btn-5">
     <span>
         Git
