made changes to the resume

--- a/index.html
+++ b/index.html
@@ -30,25 +30,28 @@
 
 <section>
 
-    <h2>Мои хобби</h2>
-
-    <div class="container">
-        <ul>
-         <li>Программирование</li>
-         <br>
-         <li>Компьютерные игры</li>
-         <br>
-         <li>MMA</li>
-         <br>
-         <li>Книги Гарри Гаррисона</li>
-        </ul>
+    <div class="container hobbi2">
+        <table>
+            <h2>Мои хобби</h2>
+            <ul>
+            <li>Программирование</li>отал резюме
+            <br>
+            <li>Компьютерные игры</li>
+            <br>
+            <li>MMA</li>
+            <br>
+            <li>Книги Гарри Гаррисона</li>
+            </ul>
+        </table>
     </div>
-
+    <br>
+    <div class="hobbi3">
     <h2>Список социальных сетей</h2>
 
     <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
     
     <a href="https://vk.com/m_keeeeeeeeeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
+    </div>
 
 </section>
 
@@ -59,7 +62,7 @@
     </span>
 </button>
 </div>
-
+<div class="hobbi4">
 <h2>Связаться со мной</h2>
 
     <form>
@@ -82,6 +85,6 @@
 
         <button type="submit">Отправить форму</button>
     </form>
-
+    </div>
 </body>
 </html>
