--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <table>
             <h2>Мои хобби</h2>
             <ul>
-            <li>Программирование</li>отал резюме
+            <li>Программирование</li>
             <br>
             <li>Компьютерные игры</li>
             <br>
