серые тона, прошёл тему

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <h1>Тугулов Иннокентий</h1>  
     </header>
 
-    <div class="description">
+    <div class="description card">
     <p>Я только начинаю свой путь в программировании и хочу сменить род деятельности</p>
 
     <p>Я люблю программировать и спать</p>
     </div>
-
+    <br>
 <section>
 
-    <div class="container hobbi2">
+    <div class="container card">
         <table>
             <h2>Мои хобби</h2>
             <ul>
@@ -42,15 +42,18 @@
             <br>
             <li>Книги Гарри Гаррисона</li>
             </ul>
+            <br>
         </table>
     </div>
     <br>
-    <div class="hobbi3">
+    <div class="card">
     <h2>Список социальных сетей</h2>
 
     <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
     
     <a href="https://vk.com/m_keeeeeeeeeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
+    <br>
+    <br>
     </div>
 
 </section>
@@ -62,7 +65,7 @@
     </span>
 </button>
 </div>
-<div class="hobbi4">
+<div class="card">
 <h2>Связаться со мной</h2>
 
     <form>
