--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
             
-            <a href="https://vk.com/m_keeeeeeeeeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
+            <a href="https://vk.com/m_keeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
             <br>
             <br>
             </div>
@@ -87,7 +87,7 @@
                     <textarea name="" id="message" cols="35" rows="10" placeholder="Введите сообщение. . ."></textarea>
                 </div>
 
-                <button type="submit">Отправить форму</button>
+                <button class="btn-1" style="vertical-align:middle" type="submit"><span>Отправить форму</span></button>
             </form>
             </div>
     </div>
