--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             <div class="card">
             <h2>Список социальных сетей</h2>
 
-            <a href="https://t.me/Aquianna" target="contact"><img src="imgs/pngwing.com.png" alt="ссылка на телеграмм" width="50"></a>
+            <a href="https://t.me/Aquianna" target="contact"><img src="imgs/free-icon-telegram-2111813.png" alt="ссылка на телеграмм" width="50"></a>
             
             <a href="https://vk.com/m_keeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
+
             <br>
             <br>
             </div>
