--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container card">
                 <table>
                     <h2>Мои хобби</h2>
-                    <ul>
+                    <ol class="list">
                     <li>Программирование</li>
                     <br>
                     <li>Компьютерные игры</li>
@@ -42,7 +42,7 @@
                     <li>MMA</li>
                     <br>
                     <li>Книги Гарри Гаррисона</li>
-                    </ul>
+                    </ol>
                     <br>
                 </table>
             </div>
@@ -52,7 +52,7 @@
 
             <a href="https://t.me/Aquianna" target="contact"><img src="imgs/free-icon-telegram-2111813.png" alt="ссылка на телеграмм" width="50"></a>
             
-            <a href="https://vk.com/m_keeey" target="contact"><img src="imgs/pngwing.com (1).png" alt="ссылка на контакт" width="50"></a>
+            <a href="https://vk.com/m_keeey" target="contact"><img src="imgs/pngwing.com (1) (1).png" alt="ссылка на контакт" width="50"></a>
 
             <br>
             <br>
