added table with courses

--- a/index.html
+++ b/index.html
@@ -34,19 +34,30 @@
             <div class="container card">
                 <table>
                     <h2>Мои хобби</h2>
+
                     <ol class="list">
                     <li>Программирование</li>
-                    <br>
                     <li>Компьютерные игры</li>
-                    <br>
                     <li>MMA</li>
-                    <br>
                     <li>Книги Гарри Гаррисона</li>
                     </ol>
-                    <br>
                 </table>
             </div>
+            
             <br>
+
+            <div class="card">
+                <h2>Мои курсы</h2>
+
+                <ol class="link-list">
+                    <li>Какие то курсы</li>
+                    <li>Какие то курсы</li>
+                    <li>Какие то курсы</li>
+                </ol>
+            </div>
+
+            <br>
+
             <div class="card">
             <h2>Список социальных сетей</h2>
 
