закончил адаптивную верстку

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <meta name="description" content="Это сайт резюме Тугулова Иннокентия">
     <title>Innokentiy resume</title>
 
+    <style>
+        @media screen and (max-width: 600px) {
+         table {
+         border: 0;
+         }
+
+        table tr {
+            display: block;
+        }
+
+        table td {
+            display: block;
+        }
+        }
+    </style>
 
 </head>
 <body>
@@ -15,7 +30,7 @@
     
         <link rel="stylesheet" href="css/main.css">
 
-        <table class="card">
+        <table border="0" cellspacing="0" cellpadding="0" class="card">
             <tr>
                 <td>
                     <div class="info photo box">
