доделал адаптивную верстку

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Innokentiy resume</title>
 
     <style>
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 650px) {
          table {
          border: 0;
          }
@@ -20,6 +20,11 @@
 
         table td {
             display: block;
+        }
+
+        .info {
+            display: block;
+            text-align: center;
         }
         }
     </style>
